add dependency check